fix: mobile modal button visible (#138)
* fix: initial attempt

* fix: check dvh loading

* fix: max height default

* fix: functional dvh approach

* fix: fallback case

* fix: reinstate support checks

* fix: instate overlay dvh

* fix: spacing tweak

--- a/src/overlays/Modal.scss
+++ b/src/overlays/Modal.scss
@@ -49,11 +49,20 @@
     width: auto;
   }
 
-  max-height: 100vh;
-  max-width: 100vw;
   @media (min-width: $screen-md) {
     max-height: calc(100vh - var(--bloom-s6));
     max-width: calc(100vw - var(--bloom-s6));
+  }
+  @supports (max-height: 100dvh) {
+    --max-height: 100dvh;
+  }
+  @supports not (max-height: 100dvh) {
+    @media (max-width: $screen-sm) {
+      padding-bottom: var(--bloom-s20);
+      border: none;
+      box-shadow: none;
+      background-clip: content-box;
+    }
   }
 }
 
@@ -147,4 +156,3 @@
     --modal-margin-top: var(--bloom-s6);
   }
 }
-
